--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Mormon Church -- Doctrines'
 - !lcc 'BX'
+- GITenberg
 title: "A Voice of Warning\r\nOr, an introduction to the faith and doctrine of The\
   \ Church of Jesus Christ of Latter-Day Saints"
 url: http://www.gutenberg.org/ebooks/35554
